src/static/room.css
/* ... */
.content-wrapper.sidebar-drawer .sidebar.open .sidebar-drawer-handle {
  margin-right: 0 !important;
}

.sidebar-widget {
  display: inline-block;
  position: relative;
  width: 1.2em;
  height: 1.2em;
  margin: 1px 0;
  border: 0;
  padding: 2px;
  box-sizing: content-box;
  border-radius: 50%;
  vertical-align: bottom;
  font: inherit;
  line-height: 0;
}
.sidebar-widget {
  -webkit-transition: box-shadow 0.1s;
  transition: box-shadow 0.1s;
}
.sidebar-widget.bordered {
  border: 1px solid black;
  padding: 1px;
}
.sidebar-widget::-moz-focus-inner {
  margin: 0;
  border: 0;
  padding: 0;
}
.sidebar-widget img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.sidebar-widget.bordered img {
  padding: 2px;
  box-sizing: border-box;
}
button.sidebar-widget {
  cursor: pointer;
}
button.sidebar-widget:hover {
  box-shadow: 0 0 10px #404040;
}

.spinner {
  display: none;
}
.spinner.visible {
  display: inline-block;
}

.logo-button:hover {
  background: black;
}

a.room-name {
  display: inline-block;
  margin: 3px 0;
  font-weight: bold;
  text-decoration: none;
  color: inherit;
}
a.room-name .staging {
  font-weight: normal;
  font-style: italic;
}

.content-wrapper.sidebar-overlay a.room-name {
  /* "word-wrap: anywhere" (a.k.a. "overflow-wrap: anywhere") would be nicer,
   * but the following is more compatible: */
  word-break: break-all;
}
.content-wrapper.sidebar-pane a.room-name {
  vertical-align: top;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}

.online-status {
  background: #ffff00;
}
.online-status.connected {
  background: #00c000;
}
.online-status.broken {
  background: #c00000;
}
.online-status.local {
  background: #c0c0c0;
}

.settings {
  background: white;
}
.settings:hover {
  background: #e0e0e0;
}
.settings:active {
  background: #c0c0c0;
}
.settings-placeholder {
  display: none;
}

.settings-wrapper {
  display: none;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 20;
  -webkit-flex-direction: column;
  flex-direction: column;
  pointer-events: none;
}
.sidebar-top > .settings-wrapper {
  padding: 0;
  background: none;
}
.settings-box {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin: 4px 2px 0 0;
  border: 2px solid black;
  min-height: 0;
  background: white;
  text-align: left;
  pointer-events: auto;
}
.settings-box h2 {
  margin: 1px 1.2em 1px 5px;
  padding-right: 5px;
  font-size: inherit;
  line-height: 1.2;
}
.settings-scroller {
  overflow: auto;
}
.settings-content {
  padding: 0 5px 5px 5px;
}
.settings-content h3 {
  font-size: inherit;
  font-weight: normal;
  font-style: italic;
}
.settings-content label {
  display: block;
  white-space: nowrap;
}
.settings-content label.more-content {
  display: none;
}
.settings-content .show-more label.more-content {
  display: block;
}
.settings-content hr {
  border: none;
  height: 5px;
}
.settings-content .more-link {
  color: #808080;
  font-size: smaller;
}

.settings.visible {
  position: absolute;
  top: 2px;
  right: 3px;
  border-radius: 0;
  border-width: 1px 1px 0 0;
  padding: 1px 1px 2px 2px;
  box-shadow: none;
  z-index: 25;
}
.settings.visible img {
  padding: 2px 2px 3px 3px;
}
.settings.visible + .settings-placeholder {
  display: inline-block;
}
.settings-wrapper.visible {
  display: -webkit-flex;
  display: flex;
}

.content-wrapper.sidebar-overlay .settings-wrapper {
  bottom: 5em;
}
.content-wrapper.sidebar-pane .settings-wrapper {
  bottom: 5px;
}
.content-wrapper.sidebar-pane .settings-box {
  margin: 4px 4px 0 0;
}

.ui-message-box {
  font-weight: bold;
  white-space: pre-line;
}
.ui-message-box:empty {
  display: none;
}
.ui-message-box > .clickable {
  cursor: pointer;
}
.ui-message-box > .clickable:hover {
  text-decoration: underline;
}

.content-wrapper.sidebar-overlay .ui-message-box {
  text-align: right;
}

.user-list {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  background: none;
}
.user-list.collapsed {
  display: none;
}

.user-list .nick-box {
  margin-bottom: 2px;
  box-shadow: 0 0 5px white;
}
.user-list .nick-box:last-child {
  margin-bottom: 0;
}
.user-list .nick-box:empty {
  display: none;
}
.user-list .nick-box > .nick {
  float: left;
  z-index: 11;
  cursor: pointer;
  outline-offset: -1px;
}
.user-list .nick-box::after {
  content: "";
  display: block;
  clear: both;
}

.user-list .nick-box.selected > .nick {
  margin-bottom: 1px;
  margin-right: 5px;
  border-width: 1px 0 0 1px;
  border-style: solid;
  border-color: black;
  padding-top: 0;
  padding-left: 1px;
}

.user-list-menu {
  border: 1px solid black;
  padding: 1px;
  background: white;
  min-width: 10em;
}
.user-list-menu h2 {
  display: block;
  margin-top: -1px;
  font-size: inherit;
}
.user-list-menu .clear {
  clear: both;
}

.content-wrapper.sidebar-overlay .user-list {
  -webkit-align-items: flex-end;
  align-items: flex-end;
}
.content-wrapper.sidebar-overlay .user-list .nick-box {
  text-align: right;
}
.content-wrapper.sidebar-overlay .user-list .nick-box > .nick {
  float: right;
}
.content-wrapper.sidebar-overlay .user-list .nick-box.selected > .nick {
  margin-left: 5px;
  margin-right: 0;
  border-width: 1px 1px 0 0;
  padding-left: 2px;
  padding-right: 1px;
}
.content-wrapper.sidebar-overlay .user-list-menu {
  text-align: left;
}
.content-wrapper.sidebar-pane .user-list {
  -webkit-align-items: flex-start;
  align-items: flex-start;
}

.button {
  margin: 0;
  border: 1px solid black;
  padding: 1px;
  font: inherit;
  color: black;
  border-radius: 0;
  background: none;
  cursor: pointer;
  outline-offset: -2px;
}
.button:hover {
  text-decoration: underline;
  background: rgba(128, 128, 128, 0.25);
}
.button:active {
  background: rgba(128, 128, 128, 0.5);
}
.button::-moz-focus-inner {
  margin: 0;
  border: 0;
  padding: 0;
}
.button.button-block {
  display: block;
}
/* ... */

